--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - new cake</title>
+  <title>爱你呦雨倩 ——占涛涛</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 
@@ -171,7 +171,7 @@ https://twitter.com/marco_bf
 </svg>
 <div class="text">
   <h1>happy birthday!</h1>
-  <p>Poly</p>
+  <p>雨倩！ 2022.08.03</p>
 </div>
 <!-- partial -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
