--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@ https://twitter.com/marco_bf
 </svg>
 <div class="text">
   <h1>happy birthday!</h1>
-  <p>雨倩！ 2022.08.03</p>
+  <p>雨倩小可爱！ </p>
+	<p>——爱你的涛涛 2022.08.03</p>
 </div>
 <!-- partial -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
