--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@ https://twitter.com/marco_bf
     <rect x="10" y="475.571" fill="#fefae9" width="180" height="4" />
 </svg>
 <div class="text">
-  <h1>happy birthday!</h1>
+  <h1>雨倩小可爱！</h1>
 	<br />
-  <p>雨倩小可爱！ </p>
+  <p>Happy Birthday! </p>
 	<br />
 	<p>——爱你的涛涛 2022.08.03</p>
 </div>
