--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>七夕快乐💖</title>
+  <title>祝雨倩七夕快乐💖 ——涛涛</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat'><link rel="stylesheet" href="./style.css">
 
@@ -68,7 +68,7 @@
 <path id="Heart_2_" class="st7" d="M131.9,110.7c-6.8-6.3-17.4-6-23.7,0.8c-6.3,6.8-6,17.4,0.8,23.7l14.4,13.5l11.5,10.7l11.5-10.7
 	l14.4-13.5c6.8-6.3,7.1-16.9,0.8-23.7c-6.3-6.8-16.9-7.1-23.7-0.8l-2.9,2.7"/>
 </svg>
-<h1 id="Thanks">爱你呦雨倩💖 ——涛涛/h1>
+<h1 id="Thanks">爱你呦仙女倩💖</h1>
 </div>
 <!-- partial -->
   <script  src="./script.js"></script>
