--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <nav class="navigation">
         <a href="/">taotao.jop</a>
       </nav>
-      <div class="about">Hello World!</div>
+      <div class="about">Twitter friends list of Taotao</div>
     </div>
   </body>
 </html>
