REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.0)

--- a/archives.html
+++ b/archives.html
@@ -24,7 +24,7 @@
                 2022-09-17 07:19
               </time>
               <a class="annual-block-title" href="/article/Web_for_Science">
-                科研网站推荐——占涛涛
+                我最常用的科研网站
               </a>
             </li>
             
