--- a/article/Web_for_Science.html
+++ b/article/Web_for_Science.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <link rel="stylesheet" href="/_assets/main.css" />
 
-    <title>科研网站推荐——占涛涛 - taotao.jop</title>
+    <title>我最常用的科研网站 - taotao.jop</title>
   </head>
   <body>
     <div class="main">
@@ -15,7 +15,7 @@
       </nav>
       <article>
         <header>
-          <h1 class="article-title">科研网站推荐——占涛涛</h1>
+          <h1 class="article-title">我最常用的科研网站</h1>
           <div class="article-info">
             <div>
               <span
