--- a/archives.html
+++ b/archives.html
@@ -24,7 +24,7 @@
                 2022-09-17 07:19
               </time>
               <a class="annual-block-title" href="/article/Web_for_Science">
-                我常用的科研网站——占涛涛
+                科研速查
               </a>
             </li>
             
