REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.0)

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <nav class="navigation">
         <a href="/">taotao.jop</a>
       </nav>
-      <div class="about">Twitter friends list of Taotao</div>
+      <div class="about">快乐科研。</div>
     </div>
   </body>
 </html>
