--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <link rel="stylesheet" href="/_assets/main.css" />
 
-    <title>About me - taotao.jop</title>
+    <title>About me - Taotao.top</title>
   </head>
   <body>
     <div class="main">
       <nav class="navigation">
-        <a href="/">taotao.jop</a>
+        <a href="/">Taotao.top</a>
       </nav>
-      <div class="about">快乐科研。</div>
+      <div class="about">Hello World!</div>
     </div>
   </body>
 </html>
