--- a/archives.html
+++ b/archives.html
@@ -6,12 +6,12 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <link rel="stylesheet" href="/_assets/main.css" />
 
-    <title>Archives - taotao.jop</title>
+    <title>Archives - Taotao.top</title>
   </head>
   <body>
     <div class="main">
       <nav class="navigation">
-        <a href="/">taotao.jop</a>
+        <a href="/">Taotao.top</a>
       </nav>
       <div class="blogs-list-block">
         
