--- a/article/Twitter_Friends_Taotao.html
+++ b/article/Twitter_Friends_Taotao.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?a6c9f1dbdc55c8bfd2be4395deaea5a5";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
     <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <link rel="stylesheet" href="/_assets/main.css" />
 
-    <title>涛涛的推特好友列表 - taotao.jop</title>
+    <title>涛涛的推特好友列表 - Taotao.top</title>
   </head>
   <body>
     <div class="main">
       <nav class="navigation">
-        <a href="/">taotao.jop</a>
+        <a href="/">Taotao.top</a>
       </nav>
       <article>
         <header>
