REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/article/Twitter_Friends_Taotao.html
+++ b/article/Twitter_Friends_Taotao.html
@@ -47,6 +47,12 @@ var _hmt = _hmt || [];
             
           </div>
         </header>
+	<form action="http://www.baidu.com/baidu" target="_blank">
+	<div align="left">
+	<input type=text name=word size=40>
+	<input type="submit" value="百度搜索">
+	</div>
+	</form>
         <div class="article-content markdown-body"><h1 id="涛涛的推特好友">涛涛的推特好友</h1>
 <p>一、官方</p>
 <table>
