--- a/article/Web_for_Science.html
+++ b/article/Web_for_Science.html
@@ -41,6 +41,12 @@ var _hmt = _hmt || [];
             
           </div>
         </header>
+	<form action="http://www.baidu.com/baidu" target="_blank">
+	<div align="left">
+	<input type=text name=word size=40>
+	<input type="submit" value="百度搜索">
+	</div>
+	</form>
         <div class="article-content markdown-body"><p><img src="/_resources/3e2b394af8f84cfaa4df77a17dc15bf6.webp" /></p>
 <h2 id="一-搜索mag"><strong>一、搜索</strong>🔍</h2>
 <ol>
