--- a/article/Twitter_Friends_Taotao.html
+++ b/article/Twitter_Friends_Taotao.html
@@ -47,7 +47,7 @@ var _hmt = _hmt || [];
             
           </div>
         </header>
-	<form action="http://www.baidu.com/baidu" target="_blank">
+	<form action="https://www.baidu.com/baidu" target="_blank">
 	<div align="left">
 	<input type=text name=word size=40>
 	<input type="submit" value="百度搜索">
