--- a/article/Web_for_Science.html
+++ b/article/Web_for_Science.html
@@ -8,7 +8,7 @@ margin: 300px auto;
 font-size: 0;
 }
 .sou1 {
-width: 514px;
+width: 350px;
 height: 40px;
 color: #666;
 font: 16px Microsoft YaHei;
@@ -68,7 +68,7 @@ var _hmt = _hmt || [];
       </nav>
       <article>
         <header>
-          <h1 class="article-title">科研速查</h1>
+          <h1 class="article-title">科研速查 </h1> 
           <div class="article-info">
             <div>
               <span
@@ -85,15 +85,15 @@ var _hmt = _hmt || [];
             
           </div>
         </header>
-	<p </p>
+	<br />
+	<br />
+	<br />
 	<form action="https://www.baidu.com/baidu" target="_blank">
 	<div align="left">
-	<input type="text" id="sou1" class="sou1" name="word" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40>
-	<input type="submit" class="sou2" value="百度搜索">
+	<img src="https://i.ibb.co/vk352LK/tsp37-kej1k.webp" style="position:relative;left:0px;top:-27.5px;"/>  <input type="text" id="sou1" class="sou1" name="word" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40>
+	<input type="submit" class="sou2" value="百度搜索">  
 	</div>
 	</form>
-	<p </p>
-	<img src="https://i.ibb.co/vk352LK/tsp37-kej1k.webp" />
         <div class="article-content markdown-body"><h2 id="一-搜索mag"><strong>一、搜索</strong>🔍</h2>
 <ol>
 <li>
