--- a/article/Web_for_Science.html
+++ b/article/Web_for_Science.html
@@ -88,10 +88,10 @@ var _hmt = _hmt || [];
 	<br />
 	<br />
 	<br />
-	<form action="https://www.baidu.com/baidu" target="_blank">
+	<form action="https://searx.be/search" target="_blank">
 	<div align="left">
-	<img src="https://i.ibb.co/vk352LK/tsp37-kej1k.webp" style="position:relative;left:0px;top:-27.5px;"/>  <input type="text" id="sou1" class="sou1" name="word" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40>
-	<input type="submit" class="sou2" value="百度搜索">  
+	<img src="https://i.ibb.co/vk352LK/tsp37-kej1k.webp" style="position:relative;left:0px;top:-27.5px;"/> <input id="ipt1" name="categories" type="hidden" value="general" > <input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40>
+	<input type="submit" class="sou2" value="元搜索">  
 	</div>
 	</form>
         <div class="article-content markdown-body"><h2 id="一-搜索mag"><strong>一、搜索</strong>🔍</h2>
