--- a/article/Web_for_Science.html
+++ b/article/Web_for_Science.html
@@ -88,7 +88,7 @@ var _hmt = _hmt || [];
 	<br />
 	<br />
 	<br />
-	<form action="https://searx.be/search" target="_blank">
+	<form action="https://searx.xyz/search" target="_blank">
 	<div align="left">
 	<img src="https://i.ibb.co/vk352LK/tsp37-kej1k.webp" style="position:relative;left:0px;top:-27.5px;"/> <input id="ipt1" name="categories" type="hidden" value="general" > <input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40>
 	<input type="submit" class="sou2" value="元搜索">  
