REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/article/Twitter_Friends_Taotao.html
+++ b/article/Twitter_Friends_Taotao.html
@@ -94,7 +94,7 @@ var _hmt = _hmt || [];
 	<br />
 	<br />
 	<br />
-	<form action="https://s.frlt.one/search" target="_blank">
+	<form action="https://searx.tiekoetter.com/search" target="_blank">
 	<div align="left">
 	<img src="https://i.ibb.co/vk352LK/tsp37-kej1k.webp" style="position:relative;left:0px;top:-27.5px;"/> <input id="ipt1" name="categories" type="hidden" value="general" > <input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40>
 	<input type="submit" class="sou2" value="元搜索">  
