REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/archives.html
+++ b/archives.html
@@ -24,7 +24,7 @@
                 2022-10-08 21:20
               </time>
               <a class="annual-block-title" href="/article/Donate">
-                赞助
+                十分感谢您的支持！
               </a>
             </li>
             
