--- a/article/Donate.html
+++ b/article/Donate.html
@@ -59,7 +59,7 @@ var _hmt = _hmt || [];
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <link rel="stylesheet" href="/_assets/main.css" />
 
-    <title>赞助 - Taotao.top</title>
+    <title>十分感谢您的支持！ - Taotao.top</title>
   </head>
   <body>
     <div class="main">
@@ -68,7 +68,7 @@ var _hmt = _hmt || [];
       </nav>
       <article>
         <header>
-          <h1 class="article-title">赞助 </h1> 
+          <h1 class="article-title">十分感谢您的支持！ </h1> 
           <div class="article-info">
             <div>
               <span
