REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/about.html
+++ b/about.html
@@ -7,7 +7,14 @@
 <link rel="stylesheet" href="/_assets/main.css" />
 
     <title>About me - Taotao.top</title>
-
+<style>
+body{
+	margin:0;
+	color:#444;
+	background:#ecf0f1;
+	font:300 18px/18px Roboto, sans-serif;
+}
+</style>
   </head>
   <body>
   <div class="sakana-box"></div>
