--- a/article/Donate.html
+++ b/article/Donate.html
@@ -2,6 +2,11 @@
 <html>
   <head>
   <style>
+  body{
+	margin:0;
+	background:#fbf2e3;
+	font:300 18px/18px Roboto, sans-serif;
+}
   .search101 {
 width: 650px;
 margin: 300px auto;
