--- a/article/Web_for_Science.html
+++ b/article/Web_for_Science.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html EEDEB0 f9f4dc f9f1db >
 <html>
   <head>
   <style>
   body{
 	margin:0;
-	background:#fbf2e3;
+	background:#f9e8d0;
 	font:300 18px/18px Roboto, sans-serif;
 }
   .search101 {
