--- a/article/Twitter_Friends_Taotao.html
+++ b/article/Twitter_Friends_Taotao.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html EEDEB0 f9f4dc f9f1db >
+<!DOCTYPE html f9e8d0>
 <html>
   <head>
   <style>
   body{
-	margin:0;
-	background:#f9e8d0;
-	font:300 18px/18px Roboto, sans-serif;
+	background:#d0dfe6;
 }
   .search101 {
 width: 650px;
