REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/article/Donate.html
+++ b/article/Donate.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html f9e8d0>
+<!DOCTYPE html>
 <html>
   <head>
   <style>
   body{
-	background:#d0dfe6;
+	background:#f9e8d0;
 }
   .search101 {
 width: 650px;
