--- a/article/Twitter_Friends_Taotao.html
+++ b/article/Twitter_Friends_Taotao.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html f9e8d0>
+<!DOCTYPE html>
 <html>
   <head>
   <style>
   body{
-	background:#d0dfe6;
+	background:#f9e8d0;
 }
   .search101 {
 width: 650px;
