--- a/article/Twitter_Friends_Taotao.html
+++ b/article/Twitter_Friends_Taotao.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html f9e8d0>
 <html>
   <head>
   <style>
   body{
-	background:#f9e8d0;
+	background:#fffef9;
 }
   .search101 {
 width: 650px;
