--- a/article/Twitter_Friends_Taotao.html
+++ b/article/Twitter_Friends_Taotao.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html f9e8d0>
+<!DOCTYPE html f9e8d0 f9f4dc>
 <html>
   <head>
   <style>
   body{
-	background:#f9f4dc;
+	background:white;
 }
   .search101 {
 width: 650px;
