REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/article/Donate.html
+++ b/article/Donate.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html f9e8d0 f9f4dc>
 <html>
   <head>
+	<meta name="google-site-verification" content="GvZNeAjPNIQ5TMJ-HFRebzmNC8-eY98WcfezvQ75GyI" />
   <style>
   body{
 	background:white;
