--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html id="homepage">
   <head>
+  <meta name="google-site-verification" content="GvZNeAjPNIQ5TMJ-HFRebzmNC8-eY98WcfezvQ75GyI" />
     <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
