--- a/article/Twitter_Friends_Taotao.html
+++ b/article/Twitter_Friends_Taotao.html
@@ -100,7 +100,7 @@ var _hmt = _hmt || [];
 	<br />
 	<form action="https://searx.xyz/search" target="_blank">
 	<div align="left">
-	<img src="https://i.ibb.co/vk352LK/tsp37-kej1k.webp" style="position:relative;left:0px;top:-27.5px;"/> <input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40> <input id="ipt1" name="categories" type="hidden" value="general" > <input id="ipt2" name="language" type="hidden" value="zh" >
+	<img src="https://i.ibb.co/vk352LK/tsp37-kej1k.webp" style="position:relative;left:0px;top:-27.5px;"/> <input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40> <input id="ipt1" name="categories" type="hidden" value="general" > <input id="ipt2" name="language" type="hidden" value="en" >
 	<input type="submit" class="sou2" value="元搜索">  
 	</div>
 	</form>
