--- a/article/Donate.html
+++ b/article/Donate.html
@@ -95,7 +95,7 @@ var _hmt = _hmt || [];
 	<form action="https://search.rowie.at/search" target="_blank">
 	<div align="left">
 	<img src="https://i.ibb.co/vk352LK/tsp37-kej1k.webp" style="position:relative;left:0px;top:-27.5px;"/> <input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40> <input id="ipt1" name="categories" type="hidden" value="general" > <input id="ipt2" name="language" type="hidden" value="zh-CN" >
-	<input type="submit" class="sou2" value="元搜索">  
+	<input type="submit" class="sou2" value="科学搜索">  
 	</div>
 	</form>
         <div class="article-content markdown-body"><img src="/_resources/532150938cb64fcfa01220831ec34440.png" alt="82934a26bca4fe7960ac2b81c5022d4e.png" width="695" height="521" class="jop-noMdConv" /></div>
