REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/article/Donate.html
+++ b/article/Donate.html
@@ -64,6 +64,8 @@ var _hmt = _hmt || [];
 <link rel="stylesheet" href="/_assets/main.css" />
 
     <title>十分感谢您的支持！ - Taotao.top</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
   </head>
   <body>
     <div class="main">
@@ -101,5 +103,6 @@ var _hmt = _hmt || [];
         <div class="article-content markdown-body"><img src="/_resources/532150938cb64fcfa01220831ec34440.png" alt="82934a26bca4fe7960ac2b81c5022d4e.png" width="695" height="521" class="jop-noMdConv" /></div>
       </article>
     </div>
+<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
   </body>
 </html>
