--- a/article/Web_for_Science.html
+++ b/article/Web_for_Science.html
@@ -11,6 +11,20 @@
   body{
 	background:white;
 }
+img.smaller {
+	width: 180px;
+	height: 55px;
+	max-width: 180px;
+	animation: flipInX 4s;
+	-webkit-animation: flipInX 4s
+}
+.logo {
+	font-size: 2em;
+	white-space: normal;
+	word-wrap: break-word;
+	text-decoration: none;
+	color: #232323
+}
   .search101 {
 width: 650px;
 margin: 300px auto;
@@ -99,7 +113,10 @@ var _hmt = _hmt || [];
 	<br />
 	<form action="https://search.rowie.at/search" target="_blank">
 	<div align="left">
-	<img src="https://i.ibb.co/vk352LK/tsp37-kej1k.webp" style="position:relative;left:0px;top:-27.5px;"/> <input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40> <input id="ipt1" name="categories" type="hidden" value="general" > <input id="ipt2" name="language" type="hidden" value="zh-CN" >
+	<a class="logo" onclick="displayDate()">
+	<img class="smaller" src="https://i.ibb.co/MhbDZC4/21e.gif" style="position:relative;left:0px;top:-5px;">
+	</a>
+	<input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40> <input id="ipt1" name="categories" type="hidden" value="general" > <input id="ipt2" name="language" type="hidden" value="zh-CN" >
 	<input type="submit" class="sou2" value="科学搜索">  
 	</div>
 	</form>
