REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/article/Donate.html
+++ b/article/Donate.html
@@ -123,5 +123,6 @@ var _hmt = _hmt || [];
         <div class="article-content markdown-body"><img src="/_resources/532150938cb64fcfa01220831ec34440.png" alt="82934a26bca4fe7960ac2b81c5022d4e.png" width="695" height="521" class="jop-noMdConv" /></div>
       </article>
     </div>
+    <script src="cet4.js"></script>
   </body>
 </html>
