--- a/article/Traitors.html
+++ b/article/Traitors.html
@@ -7,9 +7,9 @@
 	background:white;
 }
 img.smaller {
-	width: 180px;
+	width: 82.5px;
 	height: 55px;
-	max-width: 180px;
+	max-width: 82.5px;
 	animation: flipInX 4s;
 	-webkit-animation: flipInX 4s
 }
@@ -109,7 +109,7 @@ var _hmt = _hmt || [];
 	<form action="https://search.rowie.at/search" target="_blank">
 	<div align="left">
 	<a class="logo" onclick="displayDate()">
-	<img class="smaller" src="https://i.ibb.co/MhbDZC4/21e.gif" style="position:relative;left:0px;top:-7px;">
+	<img class="smaller" src="https://upfile.asqql.com/2009pasdfasdfic2009s305985-ts/2015-10/20151071454292247.gif" style="position:relative;left:0px;top:-7px;">
 	</a>
 	<input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40> <input id="ipt1" name="categories" type="hidden" value="general" > <input id="ipt2" name="language" type="hidden" value="zh-CN" >
 	<input type="submit" class="sou2" value="科学搜索">  
