REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/archives.html
+++ b/archives.html
@@ -25,7 +25,7 @@
                 2022-12-05 23:14
               </time>
               <a class="annual-block-title" href="/article/Traitors">
-                大截图运动
+                微博截图
               </a>
             </li>
             
