--- a/archives.html
+++ b/archives.html
@@ -34,7 +34,7 @@
                 2022-10-08 21:20
               </time>
               <a class="annual-block-title" href="/article/Donate">
-                十分感谢您的支持！
+                感谢支持
               </a>
             </li>
             
