--- a/article/Web_for_Science.html
+++ b/article/Web_for_Science.html
@@ -77,7 +77,7 @@ var _hmt = _hmt || [];
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <link rel="stylesheet" href="/_assets/main.css" />
 
-    <title>科研速查 - Taotao.top</title>
+    <title>科研速查——将知识掌握在自己的手中 - Taotao.top</title>
   </head>
   <body>
     <div class="main">
@@ -86,7 +86,7 @@ var _hmt = _hmt || [];
       </nav>
       <article>
         <header>
-          <h1 class="article-title">科研速查 </h1> 
+          <h1 class="article-title">科研速查——将知识掌握在自己的手中 </h1> 
           <div class="article-info">
             <div>
               <span
