REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/archives.html
+++ b/archives.html
@@ -43,7 +43,7 @@
                 2022-09-17 13:19
               </time>
               <a class="annual-block-title" href="/article/Web_for_Science">
-                科研速查
+                科研速查——将知识掌握在自己的手中
               </a>
             </li>
             
