--- a/article/Web_for_Science.html
+++ b/article/Web_for_Science.html
@@ -106,7 +106,7 @@ var _hmt = _hmt || [];
 	<br />
 	<br />
 	<br />
-	<form action="https://searx.catfluori.de/search" target="_blank">
+	<form action="www.qwant.com" target="_blank">
 	<div align="left">
 	<a class="logo" onclick="displayDate()">
 	<img class="smaller" src="https://upfile.asqql.com/2009pasdfasdfic2009s305985-ts/2015-10/20151071454292247.gif" style="position:relative;left:0px;top:-7px;">
