REGULAR COMMIT BY JOPLIN PAGES PUBLISHER(v1.7.1)

--- a/article/Web_for_Science.html
+++ b/article/Web_for_Science.html
@@ -111,7 +111,7 @@ var _hmt = _hmt || [];
 	<a class="logo" onclick="displayDate()">
 	<img class="smaller" src="https://upfile.asqql.com/2009pasdfasdfic2009s305985-ts/2015-10/20151071454292247.gif" style="position:relative;left:0px;top:-7px;">
 	</a>
-	<input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40> <input id="ipt1" name="categories" type="hidden" value="general" > <input id="ipt2" name="language" type="hidden" value="zh-CN" >
+	<input type="text" id="sou1" class="sou1" name="q" maxlength="8048" value="" placeholder="" baiduSug=1 onmouseover="focus()" size=40>
 	<input type="submit" class="sou2" value="科学搜索">  
 	</div>
 	</form>
